--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,13 +1,17 @@
-0.4.1
+0.5.0
 -----
 
 - fix bug where callbacks for historic hooks would not be called for
   already registered plugins.  Thanks Simon Gmizelj for the PR
   and holger krekel for further fixes.
+
 - fix #17 by considering only actual functions for hooks
   this removes the ability to register arbitrary callable objects
   which at first glance is a reasonable simplification,
   thanks RonnyPfannschmidt for report and pr.
+
+- fix #9: allow registering hookspecs from instances.  The PR from
+  @tgoodlet also modernized the varnames implementation.
 
 0.4.0
 -----
